[package]
name = "ad-astra-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dominant_color = "0.4.0"
image = "0.23.12"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23", features = ["json"] }
